incremental progress on chap 1

--- a/chap1.tex
+++ b/chap1.tex
@@ -715,22 +715,77 @@ human action displaced in space and time. Where do remotely monitored
 systems fit? What about human preparatory work that allows for
 automation? These are questions to which we will return in \ref{chap3}.
 
-\subsection{Researchers in the Field}
+\subsection{Researchers}
 
 Finally, the statements of researchers themselves are responsible for
 shaping conventional narratives of autonomous vehicle development.
-Since they have the potential to reshape many areas of life, it should
+Since these vehicles have the potential to reshape many areas of life, it should
 be no surprise that a cross-section of researchers interested in the
 issue is broad indeed. Some are engineers, including those whose
 papers have made it into the news. Others are mathematicians and
 computer scientists working on problems ostensibly related to
 autonomous vehicle systems. And yet others are designers and urban
 planners interested in how the next generation of vehicle systems will
-affect our cities.
+affect our cities. The breadth of people involved means a breadth of
+technical competencies, but many of these contributions buy into the
+implicit teleological progress narrative, whether or not they expect
+driverless cars to be feasible in the market soon.
 
-Daniela Rus & the complexity researcher at the MIT Conference
+One particular strain of ideas comes from those interested in the
+social benefits that would accrue, if only cars could be automated.
+Daniela Rus of MIT's CSAIL speaks of ``data-driven mobility'' and the
+idea of using the affordances of automated vehicles to improve traffic
+patterns.\footnote{Speaking at the Senseable Cities Conference, MIT
+  ???} Taking data from phones, road cameras, satellites, and other
+sources already provides the potential of forecasting congestion,
+provided we ``put it all in the cloud'' so that it can be collated and
+queried at scale. Growing from this idea of suggesting individuals drive at
+different times or use different routes, autonomous vehicles would add
+the possibility of moving vehicles around based on predicted or
+current demand, and therefore potentially reduce the number of
+vehicles needed to move people in a city.
+???-Insert-Study-From-Ryan-Chin-Here performed mathematical modeling
+work on this topic, and discovered that ___________. Along similar
+lines, Christian Zulberti of the ENEL Foundation envisions using
+autonomous vehicles to remove traffic lights in
+cities.\footnote{Speaking at the Senseable Cities Conference, MIT ???} And Paolo
+Santi of the MIT SENSEable City lab talks of replacing traffic lights
+with a slot-based system, using cars that can communicate with each
+other and with infrastructure to double the capacity of the
+roadway.\footnote{Speaking at the Senseable Cities Conference, MIT
+  ???} Each vehicle would request a slot to pass through the
+intersection, and would be instructed to proceed according to the
+orchestrate of a central control system. This would be the return of
+Zworykin's dreams at RCA from the 1950s. Singapore is engaging in
+controlled vehicle tests to work on just such ideas, to improve car
+sharing with vehicle-to-vehicle communications and predictive traffic
+patterns.\footnote{Lam Wee Shan speaking at the Senseable Cities
+  Conference, MIT ???} 
 
-Interview material from MIT
+These concepts assume particular communicative competencies. While
+some would seem to require fully-automated vehicles, other
+visions are amenable to a variety of different types of automation.
+But all assume varying levels of persistent, networked surveillance of
+vehicle positions, and require vehicle-to-vehicle or
+vehicle-to-infrastructure communication channels to send and receive
+data and instructions. Several of these ideas also seem to present
+particularly classed views of who driverless technology would serve.
+An intersection that requires an electronic device to request a slot
+to cross will not gracefully tolerate the poor, or really anyone who
+does not own a smart car or smart phone, whatever his or her age,
+race, class, or situation. Utopian visions of doubled capacity, when
+described (as this was) as halving the wait-time to get through an
+intersection, forget the complex dynamics of human volition and our
+tendency toward homeostasis of inconvenience: city planning has found
+time and time again over the last 50 years that increasing the
+capacity of roadways does not result in less congestion, only more
+people driving.\cite{???-somethingFromMitchell} 
+
+Ryan Chin on elderly & mobility
+
+John on PRTs; Leonard on difficulties, though note that he envisions
+alternatives even if the press does not
+Michigan paper about ``may not be safer''
 
 Papers
 
