working on ch1, some notes added elsewhere

--- a/chap1.tex
+++ b/chap1.tex
@@ -779,16 +779,61 @@ intersection, forget the complex dynamics of human volition and our
 tendency toward homeostasis of inconvenience: city planning has found
 time and time again over the last 50 years that increasing the
 capacity of roadways does not result in less congestion, only more
-people driving.\cite{???-somethingFromMitchell} 
+people driving.\cite{???-somethingFromMitchell} Nevertheless, these
+sorts of envisioned futures support a get-out-of-the-way rhetoric
+among their supporters. As one suggested to me in an interview:
+``privacy-nuts'' and ``soccer-moms'' will be disturbed by the
+technology, but we should press forward anyway. Such dismissive and
+derisive categorizations, applied nonchalantly, suggest that anyone
+getting in the way of progress is either a luddite or a fearmonger who
+does not understand the technology. 
 
-Ryan Chin on elderly & mobility
+Another prominent design fiction regarding autonomous vehicles focuses
+on personal mobility, especially for the elderly or disabled. Ryan
+Chin, a notable researcher in urban mobility systems at the MIT Media
+Lab, has worked on these systems as part of the Smart Cities
+initiative. He suggests that in a world with an aging population, and
+especially in the United States given our often lacking public
+transportation infrastructure, personal mobility for a growing
+population unable to drive themselves should be one of the primary
+goals of future development.\footnote{Discussion with the author, Date
+???} Mobility, as an aspect of personal agency, is very important both
+for one's ability to live and provide for oneself, as well as for
+fostering independence and feelings of self-worth. As a side benefit,
+one researcher noted, providing automated mobility solutions should
+help persuade more senior citizens who can no longer drive safely to
+give up their licenses voluntarily, rather than risk a serious
+accident.
 
-John on PRTs; Leonard on difficulties, though note that he envisions
-alternatives even if the press does not
+This primarily automotive vision is not the only model of urban
+mobility through autonomous systems, however, and is fraught with
+certain problems. John Leonard, an MIT researcher who was involved
+with the DARPA Urban Challenge in 2007, has gone on record as a critic
+of replacing cars with driverless vehicles on existing infrastructure.
+Not only do weather conditions and negotiations with pedestrians and
+other cars present potential issues, interpreting the gestures of
+police officers and dealing with other atypical road events also make
+this a troubled vision. One alternative is the PRT, or Public Rapid
+Transit, model, which is already being deployed in certain
+geographically restricted areas. A PRT researcher I spoke to
+enumerated the benefits to the approach: separate tracks with
+controlled access greatly simplify issues of collision detection and
+negotiation with other vehicles, and reduce risks of collisions if
+they occur. Of course, controlled access requires new infrastructure,
+and seems to call to mind the famous failure of the French Aramis PRT
+project, so comprehensively covered by Latour in \emph{Aramis, or the
+  Love of Technology}. 
+
 Michigan paper about ``may not be safer''
 
-Papers
+<Find MORE Papers>
 
+What gives us confidence in these visions? Why don't they seem crazy?
+lead in to the next sections
+
+%%TODO: turn section 1 into ``science fictions, design fictions''
+%%read actual research papers and meld in their components
+%%merge back in material from chap3
 
 
 %% 3) (or worked in to each of the previous) current research
