--- a/chap2.tex
+++ b/chap2.tex
@@ -287,6 +287,8 @@ cars digitized analog video at relatively low resolutions. The
 features the systems searched for, including lane markings and other
 cars, are geometrically distinct and visible even in small images.\cite{???}
 
+<Somewhere, mention weather issues for vision>
+
 Vision-guided systems, now using digital video cameras and
 off-the-shelf consumer hardware, have the benefit of being inexpensive
 and insensitive to interference from other nearly devices (unlike
@@ -322,6 +324,13 @@ likely important to how autonomous vehicles may drive.\footnote{The
   detection: the classification threshold between moving and
   stationary, set too high, allowed one vehicle to interpret the other
   as stationary, leaving no room for unexpected behavior.\cite{???}} 
+
+<Mention: one notable researcher I spoke to drives around searching
+for situations he believes will cause trouble for current vehicles,
+trying to record them. They include many situations with police
+directing traffic, especially when combined with sun glare, or
+occlusions of the sight lines that would make predictions of oncoming
+objects difficult.>
 
 And because autonomous cars see---putatively “as we see”---their sight can
 be leveraged as visual evidence of their operation. Computer vision systems that identify
