reorganization of chap3 material into chap1

--- a/chap2.tex
+++ b/chap2.tex
@@ -520,5 +520,25 @@ matters.
 
 \subsection{Planning, Policy, Cities}
 
+Both:
+Developers, >>>>they are trying to change society
+>>>>Utopian vision of big cities freed of cars: no parked cars & only
+driverless cabs
+>>>>>but if you look closer so they have a strong male bias: envision
+businessmen taking cabs and students getting drunk and can't drive
+home by themselves
+>>>>>do the yhave an idea of what it means for people who have
+children? they don't think about it
 
+Michigan paper about ``may not be safer''
+%''Of course, the researchers are trying to correct what they regard as
+%excessive technological optimism. Still, is it entirely fair of them
+%to compare robocars only to the best drivers? Most accidents are
+%caused by the worst ones, and it is beginning to become clear that
+%those are the people that a robot could outperform with one clanky
+%arm tied behind its back.'' (Phillip E. Ross, ``Has Robocar Safety
+%Been Hyped?'' 20 Jan 2015: http://spectrum.ieee.org/cars-that-think/transportation/safety/has-robocar-safety-been-hyped)
+UMTRI-2015-2.pdf: road safety w/ self-driving vehicles, things being
+considered
+-p6
 
