first draft of ch1 complete

--- a/chap1.tex
+++ b/chap1.tex
@@ -1,7 +1,6 @@
-\chapter{Sources and Ideologies}
->Narratives and Counternarratives
+\chapter{Narratives and Counternarratives}
 
-
+%% was sources \& ideologies
 %% 2. Where is that coming from?
 %% -Sci-fi and historical dreama
 %% -a cultural vision of automation of work
@@ -65,7 +64,7 @@ goals of many news outlets interested only in pageviews.
 
 But despite this paucity of historical grounding, certain historically-specific
 dreams do filter through into the narratives of autonomous technology
-through the media of popular culture and fiction. The Jetsons, though
+through the media of popular culture and fiction. \emph{The Jetsons}, though
 the show did not actually foreground driverless vehicles, get
 remembered due to the role of flying cars, which trigger similar visions of wild
 futures made possible through technology.\cite{???} GM's Firebird III, from a
@@ -122,8 +121,13 @@ different times or use different routes, autonomous vehicles would add
 the possibility of moving vehicles around based on predicted or
 current demand, and therefore potentially reduce the number of
 vehicles needed to move people in a city.
-???-Insert-Study-From-Ryan-Chin-Here performed mathematical modeling
-work on this topic, and discovered that ___________. Along similar
+
+-???-Insert-Study-From-Ryan-Chin-Here performed mathematical modeling
+work on this topic, and discovered that a significantly smaller number
+of cars could move all the people in a city if they were automated and
+could respond to demand.
+
+Along similar
 lines, Christian Zulberti of the ENEL Foundation envisions using
 autonomous vehicles to remove traffic lights in
 cities.\footnote{Speaking at the Senseable Cities Conference, MIT ???} And Paolo
@@ -253,8 +257,6 @@ stories that get told about driverless cars and factory automation are
 primarily those rooted in the cultural consciousness, rather than in
 nuanced, factual histories.
 
-<INCLUDE MORE ACTUAL HISTORY>
-
 The early areas of automation which get picked-up by popular attention
 include the textile mills of the early 1800s, in which a large
 proportion of hand-labor was replaced by steam-powered (in the UK) and
@@ -265,7 +267,7 @@ analogy, new types of skilled labor (taxi and limousine drivers, or
 even bus drivers) are now under threat, and their fate should be no
 different than that of the workers who came before.
 
-the automation of factory work is an
+The automation of factory work is an
 important touchstone for narratives about the automation of driving
 and the creation of autonomous vehicles. But just what the
 processes of standardization, mechanization, and automation (or
@@ -315,7 +317,8 @@ further underscoring the connection between technology and republican
 virtue.''\cite[p. 217]{martello} To Coxe's romantic view, these machines  worked ``as if they
 were animated beings, endowed with all the talents of their inventors,
 laboring with organs that never tire, and subject to no expense of
-food, or bed, or raiment, or dwelling.''\cite[p. xxv]{coxe}
+food, or bed, or raiment, or dwelling.''\cite[p. xxv]{coxe} Though we
+may have lost this romanticism, we haven't lost this perceived animism.
 
 But these romantic words did not represent the whole reality of
 industrial machine labor. Human labor of
@@ -349,7 +352,7 @@ reducing the overall pool of available jobs.
 
 Arsenal practice was the site of multiple revolutions in U.S.
 manufacturing technology through the 1800s and early 1900s, notably
-the development of the so-called “American system” of interchangeable
+the development of the so-called ``American system'' of interchangeable
 parts, through which a gradual increase in mechanization would seem to
 continue, driven by the tight tolerances necessary for this production
 method. And yet armorers and managers at Harper's Ferry resisted the
@@ -458,9 +461,9 @@ automatically move the blocks through the complete process, perform
 touched the parts. Such is the vision of the automated factory. In
 truth an operator stood by each machine, ensuring its continued
 operation. But this human labor, menial as it may be, is not often
-recognized. One described his experience: “I don't do nothing but
+recognized. One described his experience: ``I don't do nothing but
 press those two buttons . . . Sometimes I use my thumbs, sometimes I
-use my wrists and sometimes I lay my whole arm across.”\cite[p. 10]{dieboldImpact} And yet,
+use my wrists and sometimes I lay my whole arm across.''\cite[p. 10]{dieboldImpact} And yet,
 despite the meniality of his labor, it is still integral to the
 process of production: without it, the line would grind to a halt. He
 no longer makes choices about how to bore a part, or which tool to
@@ -502,7 +505,7 @@ contemporary fears about automation, and only support the usual
 narrative that job-loss due to automation is inevitable, and workers
 should just get out of the way. To this view, the last two hundred
 years of innovation in automation is unidirectional and largely
-undifferentiated. From steam power to the assembly line, from
+undifferentiated:  from steam power to the assembly line, from
 Taylorism to roboticization, each was yet another nail in the coffin
 of the human worker. But while it is undeniable that automation had changed the
 character of human labor, this perceived uniformity in automation
@@ -730,13 +733,13 @@ actually resulted in a wide variety of successful projects based on
 improvements to expert systems, machine learning, natural language
 processing, and computer vision.\cite[afterword]{mccorduck} The 1983 US Strategic Computing
 initiative, led by Robert Kahn at DARPA, had AI as its third focus
-area, with “image understanding” and interpretation—made possible by
-the digitized image—as long range project goals. In its revised
+area, with ``image understanding'' and interpretation---made possible by
+the digitized image---as long range project goals. In its revised
 10-year plan, the initiative even included an autonomous land vehicle
 alongside a pilot's associate and computerized battle management
 software. The project suffered serious management problems, and
 was eventually canceled, precipitating the general crash in AI
-funding—through which research quietly continued, waiting for another
+funding---through which research quietly continued, waiting for another
 up-tick in public interest. But the Strategic Computing project,
 whatever its lofty goals, was no failure. McCorduck cites Roland and
 Shiman as saying that ``AI now performs miracles unimagined when SC
@@ -744,9 +747,12 @@ began, though it can't do what SC promised,'' which speaks to the
 important developments that were made in the service of DARPA's vision.\cite[afterword]{mccorduck}
 
 
-Though there are a number of approaches to AI research, different
-ideas of how machine intelligence can be achieved, it is instructive
-to look specifically at how three AI paradigms envision their project.
+Far from the generally accepted story of continued, natural
+progression (that while AI may not have been possible before, it must
+certainly be possible now due to continued development and greater
+computing power), there are a number of approaches to AI research, different
+ideas of how machine intelligence can be achieved. It is instructive
+to look specifically at how three AI paradigms have envisioned their project.
 Each is an answer to the question ``how can we build systems that
 can operate without humans?''
 
