--- a/chap2.tex
+++ b/chap2.tex
@@ -522,7 +522,7 @@ matters.
 
 Both:
 Developers, >>>>they are trying to change society
->>>>Utopian vision of big cities freed of cars: no parked cars & only
+>>>>Utopian vision of big cities freed of cars: no parked cars \& only
 driverless cabs
 >>>>>but if you look closer so they have a strong male bias: envision
 businessmen taking cabs and students getting drunk and can't drive
